# mkdocs-sqlalchemy-plugin

./: .gitignore  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml  test.yml
docs/: configuration.md  index.md  usage.md
docs/howto/: basic_setup.md  by_schema.md  filter_fields.md  show_sql.md  single_tables.md  table_style.md
scripts/: serve_fixture.py  update_howto_examples.py
src/mkdocs_sqlalchemy_plugin/: config.py  logger.py  markdown.py  plugin.py  utils.py
tests/: test_build.py  test_config.py  test_markdown.py  test_utils.py
tests/fixtures/: models.py
tests/fixtures/basic_setup/: mkdocs.yml
tests/fixtures/basic_setup/docs/: index.md
tests/fixtures/basic_setup/src/basic_setup/: models.py
tests/fixtures/by_schema/: mkdocs.yml
tests/fixtures/by_schema/src/by_schema/: models.py
tests/fixtures/by_schema_default/: mkdocs.yml
tests/fixtures/filter_fields/: mkdocs.yml
tests/fixtures/filter_fields/docs/: posts.md
tests/fixtures/mermaid/: mkdocs.yml
tests/fixtures/mermaid/docs/: index.md
tests/fixtures/mermaid/src/mermaid/: models.py
tests/fixtures/mermaid_schema/: mkdocs.yml
tests/fixtures/mermaid_schema/src/mermaid_schema/: models.py
tests/fixtures/mermaid_table_not_found/: mkdocs.yml
tests/fixtures/mermaid_table_not_found/docs/: index.md
tests/fixtures/show_sql/: mkdocs.yml
tests/fixtures/single_tables/: mkdocs.yml
tests/fixtures/single_tables/docs/: index.md  posts.md
tests/fixtures/single_tables/src/single_tables/: models.py
tests/fixtures/table_not_found/: mkdocs.yml
tests/fixtures/table_not_found/docs/: index.md
tests/fixtures/table_style/: mkdocs.yml
tests/fixtures/table_style/docs/: posts.md  users.md
tests/fixtures/theme/: mkdocs.yml
