[project]
name = "mkdocs-sqlalchemy-plugin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dadodimauro", email = "dadodimauro@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "sqlalchemy>=2.0.44",
]

[project.scripts]
mkdocs-sqlalchemy-plugin = "mkdocs_sqlalchemy_plugin.plugin:SqlAlchemyPlugin"

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[project.entry-points."mkdocs.plugins"]
"sqlalchemy" = "mkdocs_sqlalchemy_plugin.plugin:SqlAlchemyPlugin"

[dependency-groups]
dev = [
    "click>=8.3.1",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.5",
]
