[project]
name = "mkdocs-sqlalchemy-plugin"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dadodimauro", email = "dadodimauro@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "mdutils>=1.8.1",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "sqlalchemy>=2.0.44",
]

[project.scripts]
mkdocs-sqlalchemy-plugin = "mkdocs_sqlalchemy_plugin.plugin:SqlAlchemyPlugin"

[build-system]
requires = ["uv_build>=0.8.18,<0.9.0"]
build-backend = "uv_build"

[project.entry-points."mkdocs.plugins"]
"sqlalchemy" = "mkdocs_sqlalchemy_plugin.plugin:SqlAlchemyPlugin"

[dependency-groups]
dev = [
    "click>=8.3.1",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "pytest-html>=4.1.1",
    "ruff>=0.14.5",
]

[tool.pytest.ini_options]
addopts = "--cov=mkdocs_sqlalchemy_plugin --cov-report=term --cov-report=xml --html=test_report.html --self-contained-html"
generate_report_on_test = true

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
] # See: https://github.com/nedbat/coveragepy/issues/831

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 88
indent-width = 4

target-version = "py313"

extend-include = ["*.ipynb"]

[tool.ruff.lint]
extend-select = ["I", "UP", "T20"]
ignore = [
  "F841",  # remove unused variables
  "UP040", # new type alias syntax not supported by mypy yet
]

[tool.ruff.lint.per-file-ignores]
"scripts/*" = ["T201"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

docstring-code-format = true
docstring-code-line-length = "dynamic"
